<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">二宝</string>
    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="discover">发现</string>
    <string name="recommended_friends">新的朋友</string>
    <string name="group_chats">群聊</string>
    <string name="official_accounts">订阅号</string>
    <string name="chat">聊天</string>
    <string name="no_msg">暂时没有新消息</string>
    <string name="wechat_id">微信号</string>
    <string name="my_posts">相册</string>
    <string name="collection">收藏</string>
    <string name="wallet">钱包</string>
    <string name="card_bag">卡包</string>
    <string name="expression2">表情</string>
    <string name="settings">设置</string>
    <string name="moments">朋友圈</string>
    <string name="scan">扫一扫</string>
    <string name="shake2">摇一摇</string>
    <string name="people_nearby">附近的人</string>
    <string name="drift_bottle">漂流瓶</string>
    <string name="shopping">购物</string>
    <string name="games">游戏</string>
    <string name="search">搜索</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="password">密码</string>

    <string name="action_settings">Settings</string>

    <string name="menu_groupchat">发起群聊</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_qrcode">扫一扫</string>
    <string name="menu_money">微信支付</string>
    <string name="phone_num">手机号</string>
    <string name="click_to_register">点击注册</string>
    <string name="me_pay">支付</string>
    <string name="me_collect">收藏</string>
    <string name="me_card">卡包</string>
    <string name="me_emoji">表情</string>
    <string name="me_photo">相册</string>
    <string name="me_setting">设置</string>
    <string name="add_friend_search_cancel">取消</string>
    <string name="add_friend_search">搜索：</string>
    <string name="skip">跳过</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_speak">按住 说话</string>
    <string name="release_finish">松开 结束</string>
    <string name="up_stroke_cancel">上划 取消</string>
    <string name="finger_up_to_cancel_send">手指上划，取消发送</string>
    <string name="loosen_fingers_cancel_send">松开手指，取消发送</string>
    <string name="record_time_too_short">录音时间过短</string>
    <string name="no_record_permission_please_allow">没有录音权限！请授权！</string>
    <string name="slide_down_load_more">下拉加载更多</string>
    <string name="can_not_find_video">找不到视频</string>
    <string name="user_icon">头像</string>
    <string name="user_detail">个人信息</string>
    <string name="user_nick_name">昵称</string>
    <string name="user_count">账号</string>
    <string name="qr_code">二维码</string>
    <string name="take_pic">拍照</string>
    <string name="select_from_album">从相册选取</string>

</resources>
