<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_alignParentBottom="true"
                  android:background="@color/bar_color"
                  android:layout_height="@dimen/bottom_height">
        <com.bai.psychedelic.psychat.ui.custom.BottonIcon
                android:id="@+id/botton_icon_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bottom_image="@drawable/weixin_normal"
                app:bottom_image_select="@drawable/weixin_pressed"
                app:bottom_text="@string/chat"
        >
        </com.bai.psychedelic.psychat.ui.custom.BottonIcon>
        <com.bai.psychedelic.psychat.ui.custom.BottonIcon
                android:id="@+id/botton_icon_contact_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bottom_image="@drawable/contact_list_normal"
                app:bottom_image_select="@drawable/contact_list_pressed"
                app:bottom_text="@string/contacts"
        >
        </com.bai.psychedelic.psychat.ui.custom.BottonIcon>
        <com.bai.psychedelic.psychat.ui.custom.BottonIcon
                android:id="@+id/botton_icon_find"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bottom_image="@drawable/find_normal"
                app:bottom_image_select="@drawable/find_pressed"
                app:bottom_text="@string/discover"
        >
        </com.bai.psychedelic.psychat.ui.custom.BottonIcon>
        <com.bai.psychedelic.psychat.ui.custom.BottonIcon
                android:id="@+id/botton_icon_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bottom_image="@drawable/profile_normal"
                app:bottom_image_select="@drawable/profile_pressed"
                app:bottom_text="@string/me"
        >
        </com.bai.psychedelic.psychat.ui.custom.BottonIcon>
    </LinearLayout>
</layout>
