<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.UserDetailActivity">
    <data>
        <variable
            name="model"
            type="com.bai.psychedelic.psychat.data.viewmodel.UserDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bar_color"
        android:fitsSystemWindows="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_detail_activity_cl_top"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/bar_color"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:id="@+id/user_detail_activity_iv_back"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_top"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_top"
                app:layout_constraintLeft_toLeftOf="@+id/user_detail_activity_cl_top"
                android:onClick="backPress"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/user_detail_activity_iv_back"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_top"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_top"
                android:text="@string/user_detail"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_detail_activity_cl_icon"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_top"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/white"
            android:onClick="selectPic"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_icon"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_icon"
                app:layout_constraintLeft_toLeftOf="@+id/user_detail_activity_cl_icon"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_icon"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon"
                android:layout_marginEnd="15dp"
                app:layout_constraintRight_toRightOf="@+id/user_detail_activity_cl_icon"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_icon"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_icon"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_icon"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/app_selector_login_divider" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_detail_activity_cl_nick_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_icon"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_nick_name"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_nick_name"
                app:layout_constraintLeft_toLeftOf="@+id/user_detail_activity_cl_nick_name"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_nick_name"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="祁门路搅屎王"
                app:layout_constraintRight_toRightOf="@+id/user_detail_activity_cl_nick_name"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_nick_name"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_nick_name"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_nick_name"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/app_selector_login_divider" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_detail_activity_cl_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_nick_name"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_count"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_count"
                app:layout_constraintLeft_toLeftOf="@+id/user_detail_activity_cl_count"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_count"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="13555555555"
                app:layout_constraintRight_toRightOf="@+id/user_detail_activity_cl_count"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_count"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_count"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_count"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/app_selector_login_divider" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_detail_activity_cl_QRCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/user_detail_activity_cl_count"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qr_code"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_QRCode"
                app:layout_constraintLeft_toLeftOf="@+id/user_detail_activity_cl_QRCode"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_QRCode"
                android:textSize="20sp"
                />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/qr_code"
                android:layout_marginEnd="15dp"
                app:layout_constraintRight_toRightOf="@+id/user_detail_activity_cl_QRCode"
                app:layout_constraintTop_toTopOf="@+id/user_detail_activity_cl_QRCode"
                app:layout_constraintBottom_toBottomOf="@+id/user_detail_activity_cl_QRCode"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>